--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>test</h1>
+    <div class="container">
+        <div class="header">
+            <h4>Some Titledfgdfg</h4>
+            <h1>Bigger Title</h1>
+        </div>
+        <div class="trophies">trophies</div>
+        <div class="info">
+            <p>Mollit qui nostrud reprehenderit dolor nulla laborum dolore est voluptate tempor quis magna voluptate quis. Magna cupidatat Lorem amet Lorem ipsum aliqua tempor tempor. Amet quis occaecat enim ut ex incididunt fugiat sunt cupidatat exercitation do labore incididunt. Nisi cillum consequat commodo reprehenderit voluptate laborum. Dolor consequat incididunt laborum mollit esse aliqua ipsum sit reprehenderit cupidatat. Ad velit est ex irure.</p>
+        </div>
+        <div class="photo">photo</div>
+        <div class="bio">bio</div>
+    </div>
 </body>
 </html>
