--- a/index.html
+++ b/index.html
@@ -13,8 +13,30 @@
             <h4>Some Titledfgdfg</h4>
             <h1>Bigger Title</h1>
         </div>
-        <div class="trophies">trophies</div>
+        <div class="trophies">
+            <img src="http://placeholder.pics/svg/300" alt="">
+            <img src="http://placeholder.pics/svg/300" alt="">
+            <img src="http://placeholder.pics/svg/300" alt="">
+            <img src="http://placeholder.pics/svg/300" alt="">
+            <img src="http://placeholder.pics/svg/300" alt="">
+        </div>
         <div class="info">
+            <div>
+                <h4>title</h4>
+                <h5>subtitle</h5>
+            </div>
+            <div>
+                <h4>title</h4>
+                <h5>subtitle</h5>
+            </div>
+            <div>
+                <h4>title</h4>
+                <h5>subtitle</h5>
+            </div>
+            <div>
+                <h4>title</h4>
+                <h5>subtitle</h5>
+            </div>
         </div>
         <div class="photo">
             <img src="images/dog.png" alt="">
