added bookalet to all pages

--- a/bangorSelfCatering/index.html
+++ b/bangorSelfCatering/index.html
@@ -305,6 +305,27 @@
             </div>
         </section>
 
+        <section id="contact" class="white">
+            <div class="container">
+                <div class="gap"></div>
+                <div class="center gap fade-down section-heading">
+                    <h2 class="main-title">Book May Avenue</h2>
+                    <hr>
+                    <p>Check our free dates</p>
+                </div>
+                <div class="gap"></div>
+                <div class="row">
+                <div class="col-md-6">
+                    <div><script src="https://widgets.bookalet.co.uk/publish.js" data-bookalet="02ce9d14-2032-4e1a-996f-b3d844d696d5" data-property="8566" data-monthcount="1"></script></div>
+                </div>
+                <div class="col-md-6">
+                <div><script src="https://widgets.bookalet.co.uk/publish.js" data-bookalet="02ce9d14-2032-4e1a-996f-b3d844d696d5" data-property="8567" data-monthcount="1"></script></div>
+            </div>
+            </div>
+                <div class="gap"></div>
+            </div>
+        </section>
+
         <div id="mapwrapper">
             <div id="map"></div>
         </div>
