--- a/bangorSelfCatering/victoria-road.html
+++ b/bangorSelfCatering/victoria-road.html
@@ -266,7 +266,19 @@
                 </ul>
             </div>
         </section>
-
+        <section id="contact" class="white">
+            <div class="container">
+                <div class="gap"></div>
+                <div class="center gap fade-down section-heading">
+                    <h2 class="main-title">Book May Avenue</h2>
+                    <hr>
+                    <p>Check our free dates</p>
+                </div>
+                <div class="gap"></div>
+                <div><script src="https://widgets.bookalet.co.uk/publish.js" data-bookalet="02ce9d14-2032-4e1a-996f-b3d844d696d5" data-property="8567" data-monthcount="3"></script></div>
+                <div class="gap"></div>
+            </div>
+        </section>
         <section id="contact" class="white">
             <div class="container">
                 <div class="gap"></div>
