--- a/bangorSelfCatering/index.html
+++ b/bangorSelfCatering/index.html
@@ -309,7 +309,7 @@
             <div class="container">
                 <div class="gap"></div>
                 <div class="center gap fade-down section-heading">
-                    <h2 class="main-title">Book May Avenue</h2>
+                    <h2 class="main-title">Book our properties</h2>
                     <hr>
                     <p>Check our free dates</p>
                 </div>
