--- a/bangorSelfCatering/victoria-road.html
+++ b/bangorSelfCatering/victoria-road.html
@@ -270,7 +270,7 @@
             <div class="container">
                 <div class="gap"></div>
                 <div class="center gap fade-down section-heading">
-                    <h2 class="main-title">Book May Avenue</h2>
+                    <h2 class="main-title">Book Victoria Road</h2>
                     <hr>
                     <p>Check our free dates</p>
                 </div>
