--- a/bangorSelfCatering/index.html
+++ b/bangorSelfCatering/index.html
@@ -311,7 +311,7 @@
                 <div class="center gap fade-down section-heading">
                     <h2 class="main-title">Book our properties</h2>
                     <hr>
-                    <p>Check our free dates</p>
+                    <p>Check our dates</p>
                 </div>
                 <div class="gap"></div>
                 <div class="row">
