--- a/bangorSelfCatering/victoria-road.html
+++ b/bangorSelfCatering/victoria-road.html
@@ -272,7 +272,7 @@
                 <div class="center gap fade-down section-heading">
                     <h2 class="main-title">Book Victoria Road</h2>
                     <hr>
-                    <p>Check our free dates</p>
+                    <p>Check our dates</p>
                 </div>
                 <div class="gap"></div>
                 <div><script src="https://widgets.bookalet.co.uk/publish.js" data-bookalet="02ce9d14-2032-4e1a-996f-b3d844d696d5" data-property="8567" data-monthcount="3"></script></div>
