--- a/bangorSelfCatering/index.html
+++ b/bangorSelfCatering/index.html
@@ -132,32 +132,24 @@
                         <div class="center gap fade-down section-heading">
                             <h2 class="main-title">A Little About Us</h2>
                             <hr>
-                            <p>some text ?</p>
+                            <!-- <p>some text ?</p> -->
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1 fade-up">
-                        <p>
-                            Our accommodations are both luxurious, bright and modern properties situated in the centre of Bangor, just newly refurbished
-                            and decorated. All public amenities including restaurants, shops, bus and train station, newly
-                            opened Aurora leisure and swimming complex, marina and seafront, Pickie Fun Park are all within
-                            5-10 minutes walking distance.
-                        </p>
-                        <p>
-                            Bangor is a seaside resort set against the backdrop of Ireland's largest marina. It is located 13 miles from Belfast with
-                            excellent train and bus services. It offers historic and artistic opportunities, many high class
-                            restaurants as well as museums and theatres.
-                        </p>
-                        <p>
-                            Bangor seafront development, which includes the marina, has beautiful gardens and a promenade which leads to Pickie Fun Park
-                            and the North Down Coastal Path. The Fun Park has an adventure playground, with maritime themed
-                            equipment, a splash pool, giant swan pedal boats, electric cars, 18 hole nautical themed mini
-                            golf course and a miniature railway which travels around the Fun Park.
-                        </p>
-                        <p>
-                            The North Down Coastal Path is one of the finest shoreline walks in Ireland, taking you from Holywood, Helen's Bay, Crawfordsburn,
-                            Bangor sea front, Ballyholme and finishing close to Groomsport.
+                        <p>At Bangor Self Catering we offer luxurious, bright and modern properties situated in the centre of
+                            Bangor. All public amenities including restaurants, shops, bus and train station, Aurora leisure
+                            and swimming complex, marina and seafront, Pickie Fun Park are all within 5-10 minutes walking
+                            distance.</p>
+                        <p>Bangor is a seaside resort set against the backdrop of Ireland's largest marina. It is located 13
+                            miles from Belfast with excellent train and bus services.</p>
+                        <p>Bangor seafront development, which includes the marina and a promenade which leads to Pickie Fun
+                            Park and the North Down Coastal Path. The Fun Park has an adventure playground, with maritime
+                            themed equipment, a splash pool, giant swan pedal boats, electric cars, 18 hole nautical themed
+                            mini golf course and a miniature railway which travels around the Fun Park.</p>
+                        <p>The North Down Coastal Path is one of the finest shoreline walks in Ireland, taking you from Holywood,
+                            Helen's Bay, Crawfordsburn, Bangor sea front, Ballyholme and finishing close to Groomsport
                         </p>
                     </div>
                     <div class="col-md-4 fade-up">
@@ -170,7 +162,7 @@
                 <div id="accomodation" class="center gap fade-down section-heading">
                     <h2 class="main-title">Our Accomodation</h2>
                     <hr>
-                    <p>Some Blurb</p>
+                    <!-- <p>Some Blurb</p> -->
                 </div>
                 <div class="gap"></div>
 
@@ -315,13 +307,19 @@
                 </div>
                 <div class="gap"></div>
                 <div class="row">
-                <div class="col-md-6">
-                    <div><script src="https://widgets.bookalet.co.uk/publish.js" data-bookalet="02ce9d14-2032-4e1a-996f-b3d844d696d5" data-property="8566" data-monthcount="1"></script></div>
+                    <div class="col-md-6">
+                        <div>
+                            <script src="https://widgets.bookalet.co.uk/publish.js" data-bookalet="02ce9d14-2032-4e1a-996f-b3d844d696d5" data-property="8566"
+                                data-monthcount="1"></script>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div>
+                            <script src="https://widgets.bookalet.co.uk/publish.js" data-bookalet="02ce9d14-2032-4e1a-996f-b3d844d696d5" data-property="8567"
+                                data-monthcount="1"></script>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-6">
-                <div><script src="https://widgets.bookalet.co.uk/publish.js" data-bookalet="02ce9d14-2032-4e1a-996f-b3d844d696d5" data-property="8567" data-monthcount="1"></script></div>
-            </div>
-            </div>
                 <div class="gap"></div>
             </div>
         </section>
@@ -406,7 +404,8 @@
                         <address>
                             <abbr title="Email">
                                 <i class="fa fa-envelope"> </i>
-                            </abbr> <a href="mailto:bangorselfcatering@gmail.com">bangorselfcatering@gmail.com</a>
+                            </abbr>
+                            <a href="mailto:bangorselfcatering@gmail.com">bangorselfcatering@gmail.com</a>
                             <br>
                             <abbr title="Phone">
                                 <i class="fa fa-phone"> </i>
