--- a/bangorSelfCatering/victoria-road.html
+++ b/bangorSelfCatering/victoria-road.html
@@ -111,7 +111,7 @@
                                 <div class="center gap fade-down section-heading">
                                     <h2 class="main-title">17 Victoria Road</h2>
                                     <hr>
-                                    <p>Some Selling blurb??</p>
+                                    <!-- <p>Some Selling blurb??</p> -->
                                 </div>
                             </div>
                         </div>
@@ -136,15 +136,43 @@
                         <div class="center gap fade-down section-heading">
                             <h2 class="main-title">A Little About Victoria Road</h2>
                             <hr>
-                            <p>some text ?</p>
+                            <!-- <p>some text ?</p> -->
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-8 fade-up">
+                        <p>A luxurious, bright and modern townhouse situated in the centre of Bangor, just newly refurbished
+                            and decorated.</p>
+                        <p>5-10mins walk to all amenities including coffee shops, restaurants, shops, marina, seafront and Pickie
+                            Fun Park. 10 mins walk to bus and train station and Aurora Aquatic & Leisure Centre.</p>
+                        <p>Victoria House is a large 4 bedroom townhouse that sleeps up to 8 people. It has a fully fitted modern
+                            kitchen equipped with washing machine, dishwasher, fridge/freezer and microwave. It has one bathroom
+                            and a downstairs toilet. </p>
+                        <p>Victoria Road is the ideal base to explore the surrounding attractions which include the Ards Peninsula,
+                            Exploris, Mount Stewart, Ulster Folk & Transport Museum and Titanic Quarter, to name just a few.</p>
+                        <h3>Things Nearby:</h3>
                         <p>
-                            Our newly renovated 17 Victoria Road townhouse is within a few minutes walk to Bangor town centre. ​
+                            Marine Court Hotel
+                            <br> Coastal sea walks
+                            <br> Omniplex
+                            <br> Guillemot coffee shop
+                            <br>
                         </p>
+                        <h3>Prices:</h3>
+
+                        <p>
+                            £95.00 per night except 2 night stay which is £120.00 per night. 10% discount for stays of 7 nights and over. Any day check
+                            in.
+                        </p>
+
+                        <h3>Booking details:</h3>
+                        <p>
+                            £100 deposit secures booking with balance payable 4-6 weeks prior to arrival. Check in after 3pm. (can be flexible with times)
+                            Check out before or at 11am (can be flexible with times)
+                        </p>
+
+
                     </div>
                     <div class="col-md-4 fade-up">
                         <div id="pricing-table">
@@ -275,7 +303,10 @@
                     <p>Check our dates</p>
                 </div>
                 <div class="gap"></div>
-                <div><script src="https://widgets.bookalet.co.uk/publish.js" data-bookalet="02ce9d14-2032-4e1a-996f-b3d844d696d5" data-property="8567" data-monthcount="3"></script></div>
+                <div>
+                    <script src="https://widgets.bookalet.co.uk/publish.js" data-bookalet="02ce9d14-2032-4e1a-996f-b3d844d696d5" data-property="8567"
+                        data-monthcount="3"></script>
+                </div>
                 <div class="gap"></div>
             </div>
         </section>
