--- a/bangorSelfCatering/may-avenue.html
+++ b/bangorSelfCatering/may-avenue.html
@@ -111,7 +111,7 @@
                                 <div class="center gap fade-down section-heading">
                                     <h2 class="main-title">27 May Avenue</h2>
                                     <hr>
-                                    <p>Some Selling blurb??</p>
+                                    <!-- <p>Some Selling blurb??</p> -->
                                 </div>
                             </div>
                         </div>
@@ -136,16 +136,46 @@
                         <div class="center gap fade-down section-heading">
                             <h2 class="main-title">A Little About May Avenue</h2>
                             <hr>
-                            <p>some text ?</p>
+                            <!-- <p>some text ?</p> -->
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-8 fade-up">
                         <p>
-                            Our May Avenue Townhouse is the ideal base to explore the surrounding attractions which include the Ards Peninsula, Scrabo
-                            Tower, Exploris, Mount Stewart, Ulster Folk & Transport Museum. ​
+                            A luxurious, bright and modern townhouse situated in the centre of Bangor. 5-10mins walk to all amenities including coffee
+                            shops, restaurants, shops, marina, seafront and Pickie Fun Park. 10 mins walk to bus and train
+                            station and Aurora Aquatic & Leisure Centre.
                         </p>
+                        <p>May Avenue is a 3 bedroom townhouse that sleeps up to 6 people. It has a fully fitted modern kitchen
+                            equipped with washing mhachine, dishwasher, fridge/freezer and microwave. It has one shower room.
+                            It has a south facing patio area.</p>
+
+                        <p>May Avenue is the ideal base to explore the surrounding attractions which include the Ards Peninsula,
+                            Exploris, Mount Stewart, Ulster Folk & Transport Museum and Titanic Quarter, to name just a few.</p>
+                        <h3>Things Nearby:</h3>
+                        <p>
+                            Marine Court Hotel
+                            <br> Coastal sea walks
+                            <br> Omniplex
+                            <br> Asda Supermarket just across the road
+                            <br> Goat’s Toe Bar/Restaurant br
+                        </p>
+
+
+                        <h3>Prices:</h3>
+
+                        <p>
+                            £95.00 per night except 2 night stay which is £120.00 per night. 10% discount for stays of 7 nights and over Any day check
+                            in.
+                        </p>
+
+                        <h3>Booking details:</h3>
+                        <p>
+                            £100 deposit secures booking with balance payable 4-6 weeks prior to arrival. Check in after 3pm. (can be flexible with times)
+                            Check out before or at 11am (can be flexible with times)
+                        </p>
+
                     </div>
                     <div class="col-md-4 fade-up">
                         <div id="pricing-table">
@@ -432,7 +462,10 @@
                     <p>Check our dates</p>
                 </div>
                 <div class="gap"></div>
-                <div><script src="https://widgets.bookalet.co.uk/publish.js" data-bookalet="02ce9d14-2032-4e1a-996f-b3d844d696d5" data-property="8566" data-monthcount="3"></script></div>
+                <div>
+                    <script src="https://widgets.bookalet.co.uk/publish.js" data-bookalet="02ce9d14-2032-4e1a-996f-b3d844d696d5" data-property="8566"
+                        data-monthcount="3"></script>
+                </div>
             </div>
         </section>
         <section id="contact" class="white">
