updated content - added analytics

--- a/bangorSelfCatering/contact-us.html
+++ b/bangorSelfCatering/contact-us.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120656546-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-120656546-1');
+</script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -30,7 +40,7 @@
             jQuery('body').backstretch([
                 "images/slide/marina.jpg",
                 "images/slide/clock.jpg",
-                "image/slide/wardPark.jpg"
+                "images/slide/park.jpg"
             ], { duration: 5000, fade: 500 });
 
             $("#mapwrapper").gMap({
@@ -111,7 +121,7 @@
                                 <div class="center gap fade-down section-heading">
                                     <h2 class="main-title">Get In Touch</h2>
                                     <hr>
-                                    <p>some text?</p>
+                                    <!-- <p>some text?</p> -->
                                 </div>
                             </div>
                         </div>
