--- a/bangorSelfCatering/index.html
+++ b/bangorSelfCatering/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120656546-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-120656546-1');
+</script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -167,7 +177,7 @@
                 <div class="gap"></div>
 
                 <div id="meet-the-team" class="row">
-                    <div class="col-md-6 col-xs-6">
+                    <div class="col-sm-6">
                         <a href="#">
                             <div class="center team-member">
                                 <div class="team-image">
@@ -201,7 +211,7 @@
                         </a>
                     </div>
 
-                    <div class="col-md-6 col-xs-6">
+                    <div class="col-sm-6">
                         <div class="center team-member">
                             <div class="team-image">
                                 <img class="img-responsive img-thumbnail bounce-in" src="images/accomodation/victoria/houseNumber.jpg" alt="">
@@ -242,50 +252,52 @@
                 <div class="center gap fade-down section-heading">
                     <h2 class="main-title">Features</h2>
                     <hr>
-                    <p>Of an or game gate west face shed. ﻿no great but music too old found arose.</p>
+                    <!-- <p>Of an or game gate west face shed. ﻿no great but music too old found arose.</p> -->
                 </div>
                 <div class="gap"></div>
                 <div id="pricing-table" class="row">
-                    <div class="col-md-6 col-xs-6 flip-in">
+                    <div class="col-md-6 flip-in">
                         <ul class="plan plan1">
                             <li class="plan-name">
                                 <h3>27 May Avenue</h3>
                             </li>
                             <li class="plan-price">
                                 <div>
-                                    <span class="price">Features</span>
+                                    <span class="price">Features at a glance</span>
                                 </div>
                             </li>
-                            <li>Three Bedrooms</li>
-                            <li>Sleeps up to 6</li>
-                            <li>Shower room</li>
+                            <li>Three Bedrooms - Sleeps 6</li>
+                            <li>Shower Room</li>
                             <li>Living Room</li>
-                            <li>Modern Kitchen</li>
-                            <li>Dining</li>
-                            <li>South facing Patio Area</li>
+                            <li>Dining Area</li>
+                            <li>Patio Area</li>
+                            <li>Woodburning stove</li>
+                            <li>Private Parking Space</li>
+                            <li>Free WiFi</li>
                             <li class="plan-action">
                                 <a href="may-avenue.html" class="btn btn-outlined btn-primary btn-md btn-white">View</a>
                             </li>
                         </ul>
                     </div>
                     <!--/.col-md-3-->
-                    <div class="col-md-6 col-xs-6 flip-in">
+                    <div class="col-md-6 flip-in">
                         <ul class="plan plan4">
                             <li class="plan-name">
                                 <h3>17 Victoria Road</h3>
                             </li>
                             <li class="plan-price">
                                 <div>
-                                    <span class="price">Features</span>
+                                    <span class="price">Features at a glance</span>
                                 </div>
                             </li>
                             <li>Four Bedrooms</li>
-                            <li>Sleeps up to 8</li>
-                            <li>Two bathrooms</li>
+                            <li>Bathroom</li>
                             <li>Living Room</li>
-                            <li>Kitchen Dining</li>
+                            <li>Dining Area</li>
                             <li>Patio Area</li>
+                            <li>Woodburning stove</li>
                             <li>Private Parking Space</li>
+                            <li>Free WiFi</li>
                             <li class="plan-action">
                                 <a href="victoria-road.html" class="btn btn-outlined btn-primary btn-md btn-white">View</a>
                             </li>
