--- a/bangorSelfCatering/may-avenue.html
+++ b/bangorSelfCatering/may-avenue.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120656546-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-120656546-1');
+</script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -162,6 +172,29 @@
                             <br> Goat’s Toe Bar/Restaurant br
                         </p>
 
+                        <h3>Features</h3>
+                        <p>3 bedrooms - 1 double room, 1 twin room, bunk beds
+                            <br> Sleeps 6 people
+                            <br> 1 shower room
+                            <br> Living room
+                            <br> Dining area
+                            <br> Patio area
+                            <br> Private parking at rear of property
+                            <br> Free wifi
+                            <br> Bedding and towels available
+                            <br> Gas heating
+                            <br> Woodburning stove
+                            <br> TV/DVD player
+                            <br> I-pod docking station
+                            <br> Iron
+                            <br> Hairdryer
+                            <br> Travel Cot
+                            <br> High Chair
+                            <br> Kitchen facilities: Dishwasher, Washing Machine, Microwave, Fridge/Freezer</p>
+
+                        <p>No Smoking Policy in place</p>
+
+
 
                         <h3>Prices:</h3>
 
@@ -186,15 +219,17 @@
                                     </li>
                                     <li class="plan-price">
                                         <div>
-                                            <span class="price">Features</span>
+                                            <span class="price">Features at a glance</span>
                                         </div>
                                     </li>
-                                    <li>Three Bedrooms</li>
-                                    <li>Two bathrooms</li>
+                                    <li>Three Bedrooms - Sleeps 6</li>
+                                    <li>Shower Room</li>
                                     <li>Living Room</li>
-                                    <li>Kitchen Dining</li>
+                                    <li>Dining Area</li>
                                     <li>Patio Area</li>
+                                    <li>Woodburning stove</li>
                                     <li>Private Parking Space</li>
+                                    <li>Free WiFi</li>
                                     <li class="plan-action">
                                         <a href="#" class="btn btn-outlined btn-primary btn-md btn-white">Contact Us</a>
                                     </li>
