--- a/bangorSelfCatering/victoria-road.html
+++ b/bangorSelfCatering/victoria-road.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120656546-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-120656546-1');
+</script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -157,8 +167,38 @@
                             <br> Coastal sea walks
                             <br> Omniplex
                             <br> Guillemot coffee shop
+                        </p>
+
+                        <h3>Features</h3>
+                        <p>
+                            4 bedrooms
+                            <br> 1st floor – 1 kingsize room, 1 twin room
+                            <br> 2nd floor – 1 double room, 1 twin room
+                            <br> Sleeps 8 people
+                            <br> 1 bathroom
+                            <br> Downstairs toilet
+                            <br> Living room
+                            <br> Dining area
+                            <br> Patio area
+                            <br> Private parking at rear of property
+                            <br> Free WiFi
+                            <br> Bedding and towels available
+                            <br> Gas heating
+                            <br> Woodburning stove
+                            <br> TV/DVD player
+                            <br> I-pod docking station
+                            <br> Iron
+                            <br> Hairdryer
+                            <br> Travel Cot
+                            <br> High Chair
+                            <br> Kitchen facilities: Dishwasher, Washing Machine, Microwave, Fridge/Freezer
                             <br>
                         </p>
+
+                        <p>
+                            No Smoking Policy in place
+                        </p>
+
                         <h3>Prices:</h3>
 
                         <p>
@@ -183,14 +223,16 @@
                                     </li>
                                     <li class="plan-price">
                                         <div>
-                                            <span class="price">Features</span>
+                                            <span class="price">Features at a glance</span>
                                         </div>
                                     </li>
                                     <li>Four Bedrooms</li>
                                     <li>Two bathrooms</li>
                                     <li>Living Room</li>
-                                    <li>Kitchen Dining</li>
+                                    <li>Dining Area</li>
                                     <li>Patio Area</li>
+                                    <li>Woodburning stove</li>
+                                    <li>Free WiFi</li>
                                     <li>Private Parking Space</li>
                                     <li class="plan-action">
                                         <a href="#" class="btn btn-outlined btn-primary btn-md btn-white">Contact Us</a>
